# rust-byte-slice

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  macros.rs  test.rs
